--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - mynetwork
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-  
+
   grafana:
     image: grafana/grafana:latest
     ports:
@@ -31,7 +31,7 @@ services:
       - "9113:9113"
     networks:
       - mynetwork
-    command: ["-nginx.scrape-uri=http://nginx/stub_status"]
+    command: ["-nginx.scrape-uri=http://nginx:8080/stub_status"]
 
 networks:
   mynetwork:
