--- a/cloudformation-template.yml
+++ b/cloudformation-template.yml
@@ -99,111 +99,4 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           set -e
-          echo "Iniciando script de configuración" > /var/log/user-data.log
-          
-          # Actualizar el sistema
-          apt-get update -y | tee -a /var/log/user-data.log
-          apt-get upgrade -y | tee -a /var/log/user-data.log
-          
-          # Instalar Docker
-          apt-get install -y docker.io | tee -a /var/log/user-data.log
-          
-          # Iniciar el servicio Docker
-          systemctl start docker | tee -a /var/log/user-data.log
-          
-          # Habilitar el servicio Docker para que se inicie automáticamente
-          systemctl enable docker | tee -a /var/log/user-data.log
-          
-          # Agregar el usuario ubuntu al grupo docker
-          usermod -aG docker ubuntu | tee -a /var/log/user-data.log
-          
-          # Instalar Docker Compose
-          curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose | tee -a /var/log/user-data.log
-          chmod +x /usr/local/bin/docker-compose | tee -a /var/log/user-data.log
-          
-          # Crear archivo docker-compose.yml
-          cat <<EOF > /home/ubuntu/docker-compose.yml
-          version: '3'
-          services:
-            nginx:
-              image: nginx:latest
-              ports:
-                - "80:80"
-              networks:
-                - mynetwork
-              volumes:
-                - ./nginx.conf:/etc/nginx/nginx.conf
-            grafana:
-              image: grafana/grafana:latest
-              ports:
-                - "3000:3000"
-              networks:
-                - mynetwork
-            prometheus:
-              image: prom/prometheus:latest
-              ports:
-                - "9090:9090"
-              networks:
-                - mynetwork
-              volumes:
-                - ./prometheus.yml:/etc/prometheus/prometheus.yml
-            nginx-exporter:
-              image: nginx/nginx-prometheus-exporter:latest
-              ports:
-                - "9113:9113"
-              networks:
-                - mynetwork
-              command: ["-nginx.scrape-uri=http://nginx/stub_status"]
-          networks:
-            mynetwork:
-              driver: bridge
-          EOF
-          
-          # Crear archivo nginx.conf
-          cat <<EOF > /home/ubuntu/nginx.conf
-          worker_processes 1;
-
-          events {
-              worker_connections 1024;
-          }
-
-          http {
-              include /etc/nginx/mime.types;
-              default_type application/octet-stream;
-
-              sendfile on;
-              keepalive_timeout 65;
-
-              server {
-                  listen 80;
-                  server_name localhost;
-
-                  location / {
-                      proxy_pass http://nginx/stub_status;
-                      proxy_set_header Host \$host;
-                      proxy_set_header X-Real-IP \$remote_addr;
-                  }
-
-                  location /stub_status {
-                      stub_status on;
-                      access_log off;
-                      allow all;
-                  }
-              }
-          }
-          EOF
-          
-          # Crear archivo prometheus.yml
-          cat <<EOF > /home/ubuntu/prometheus.yml
-          global:
-            scrape_interval: 15s
-          scrape_configs:
-            - job_name: 'nginx'
-              static_configs:
-                - targets: ['nginx-exporter:9113']
-          EOF
-
-          # Ejecutar docker-compose
-          docker-compose -f /home/ubuntu/docker-compose.yml up -d | tee -a /var/log/user-data.log
-          
-          echo "Script de configuración completado" >> /var/log/user-data.log
+          echo "In
